[gd_scene load_steps=4 format=3 uid="uid://bcie26b6i36hi"]

[ext_resource type="Script" path="res://Scripts/Main_Menu.gd" id="1_hn81m"]
[ext_resource type="StyleBox" uid="uid://ds6e7e74jve5k" path="res://Resources/Themes/Menu_Panel.tres" id="2_8p8b5"]
[ext_resource type="Script" path="res://Scripts/Data/settings.gd" id="2_ays27"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hn81m")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
offset_top = 620.0
offset_right = 640.0
offset_bottom = 670.0
scale = Vector2(3, 3)
ratio = 2.5

[node name="Button" type="Button" parent="AspectRatioContainer"]
layout_mode = 2
text = "Play"

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
offset_top = 781.0
offset_right = 960.0
offset_bottom = 831.0
scale = Vector2(2, 2)
ratio = 2.5

[node name="Button" type="Button" parent="AspectRatioContainer2"]
layout_mode = 2
text = "Settings"

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="."]
offset_top = 895.0
offset_right = 960.0
offset_bottom = 945.0
scale = Vector2(2, 2)
ratio = 2.5

[node name="Button" type="Button" parent="AspectRatioContainer3"]
layout_mode = 2
text = "Quit
"

[node name="Settings" type="PanelContainer" parent="."]
visible = false
offset_left = 240.0
offset_top = 135.0
offset_right = 1680.0
offset_bottom = 945.0
theme_override_styles/panel = ExtResource("2_8p8b5")
script = ExtResource("2_ays27")

[node name="TabContainer" type="TabContainer" parent="Settings"]
layout_mode = 2
tab_alignment = 1
current_tab = 0

[node name="General" type="TabBar" parent="Settings/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="Settings/TabContainer/General"]
layout_mode = 0
offset_left = 20.0
offset_right = 1420.0
offset_bottom = 40.0

[node name="Fullscreen" type="OptionButton" parent="Settings/TabContainer/General/MarginContainer"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Windowed"
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="Video" type="TabBar" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Audio" type="TabBar" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Controls" type="TabBar" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
offset_left = 240.0
offset_top = 941.0
offset_right = 1680.0
offset_bottom = 997.0
theme_override_styles/panel = ExtResource("2_8p8b5")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Apply" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Apply"

[node name="Close" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="settings_data" from="." to="Settings" method="_on_main_settings_data"]
[connection signal="pressed" from="AspectRatioContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer2/Button" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="AspectRatioContainer3/Button" to="." method="_on_button3_pressed"]
[connection signal="item_selected" from="Settings/TabContainer/General/MarginContainer/Fullscreen" to="Settings" method="_on_Fullscreen_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Save" to="Settings" method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Apply" to="Settings" method="_on_apply_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Close" to="Settings" method="_on_close_pressed"]
